tests/models/enum/named/u64/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = 1)]
        value: u64
    },
}
fn main() {}
